--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+psycopg2://postgres:1234@localhost:5432/uml
+sqlalchemy.url = sqlalchemy.url = postgresql+psycopg2://postgres:OGfvdTJASYyhgrWXXwbmymTnIUupoebV@postgres.railway.internal:5432/railway
 
 [loggers]
 keys = root,sqlalchemy,alembic
