--- a/alembic.ini
+++ b/alembic.ini
@@ -1,7 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = sqlalchemy.url = postgresql+psycopg2://postgres:OGfvdTJASYyhgrWXXwbmymTnIUupoebV@postgres.railway.internal:5432/railway
-
+sqlalchemy.url = postgresql+psycopg2://postgres:OGfvdTJASYyhgrWXXwbmymTnIUupoebV@centerbeam.proxy.rlwy.net:38477/railway
 [loggers]
 keys = root,sqlalchemy,alembic
 
