--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
 ;para https://railway.com/
-DB_URL=postgresql://postgres:OGfvdTJASYyhgrWXXwbmymTnIUupoebV@postgres.railway.internal:5432/railway
+DB_URL=postgresql+psycopg2://postgres:OGfvdTJASYyhgrWXXwbmymTnIUupoebV@centerbeam.proxy.rlwy.net:38477/railway
+
+JWT_SECRET=super-secret-key
+JWT_ALG=HS256
+ACCESS_EXPIRE_MIN=480
+REFRESH_EXPIRE_DAYS=14
+CORS_ORIGINS=http://localhost:5173
+DEBUG=true
 ; local
-; DEBUG=true
-; DB_URL=postgresql+psycopg2://postgres:1234@localhost:5432/uml
+ ;DEBUG=true
+ ;DB_URL=postgresql+psycopg2://postgres:1234@localhost:5432/uml
 ; JWT_SECRET=super-secret-key
 ; JWT_ALG=HS256
 ; ACCESS_EXPIRE_MIN=480
