--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
-;para https://railway.com/
-DB_URL=postgresql+psycopg2://postgres:OGfvdTJASYyhgrWXXwbmymTnIUupoebV@centerbeam.proxy.rlwy.net:38477/railway
+;para render .env
+DB_URL=sqlalchemy.url = postgresql+psycopg2://uml_ai_tool_db_wsqr_user:eVwyIdIHA5jMcdlTG9fKibWvMvRgUJFj@dpg-d43mo22dbo4c73aq1e3g-a:5432/uml_ai_tool_db_wsqr
 
-JWT_SECRET=super-secret-key
-JWT_ALG=HS256
-ACCESS_EXPIRE_MIN=480
-REFRESH_EXPIRE_DAYS=14
-CORS_ORIGINS=http://localhost:5173
-DEBUG=true
-; local
+
+;para https://railway.com/
+;DB_URL=postgresql+psycopg2://postgres:OGfvdTJASYyhgrWXXwbmymTnIUupoebV@centerbeam.proxy.rlwy.net:38477/railway
+
+;local postgres
+; .env backend file
  ;DEBUG=true
  ;DB_URL=postgresql+psycopg2://postgres:1234@localhost:5432/uml
 ; JWT_SECRET=super-secret-key
