--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,11 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+psycopg2://uml_ai_tool_db_wsqr_user:eVwyIdIHA5jMcdlTG9fKibWvMvRgUJFj@dpg-d43mo22dbo4c73aq1e3g-a:5432/uml_ai_tool_db_wsqr
+sqlalchemy.url = postgresql+psycopg2://uml_ai_tool_db_wsqr_user:eVwyIdIHA5jMcdlTG9fKibWvMvRgUJFj@dpg-d43mo22dbo4c73aq1e3g-a.oregon-postgres.render.com:5432/uml_ai_tool_db_wsqr?sslmode=require
+
+
+
+
+
 [loggers]
 keys = root,sqlalchemy,alembic
 
