--- a/alembic.ini
+++ b/alembic.ini
@@ -1,7 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+psycopg2://uml_ai_tool_db_wsqr_user:eVwyIdIHA5jMcdlTG9fKibWvMvRgUJFj@dpg-d43mo22dbo4c73aq1e3g-a.oregon-postgres.render.com:5432/uml_ai_tool_db_wsqr?sslmode=require
-
+sqlalchemy.url = postgresql+psycopg2://postgres:1234@localhost:5432/uml
 
 
 
